src/objects/Negocio__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuraciones  globales</description>
    <fields>
        <fullName>CorreoBatchERP__c</fullName>
        <description>Lista de correos para notificar la finalización de la ejecución batch</description>
        <label>CorreoBatchERP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Folio__c</fullName>
        <description>Número de folio consecutivo para candidatos y prospéctos</description>
        <inlineHelpText>Número de folio consecutivo para candidatos y prospéctos</inlineHelpText>
        <label>Folio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximoGrupoOnline__c</fullName>
        <defaultValue>20</defaultValue>
        <description>Número de veces que permite el cupo de un grupo Online</description>
        <inlineHelpText>Número de veces que permite el cupo de un grupo Online</inlineHelpText>
        <label>Máximo grupo online</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximoGrupo__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Número de veces que permite el cupo de un grupo Presencial o Ejecutiva</description>
        <inlineHelpText>Número de veces que permite el cupo de un grupo Presencial o Ejecutiva</inlineHelpText>
        <label>Máximo grupo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximoRepeticionCandidatos__c</fullName>
        <description>Número de veces que se permite un candidato ser repetido, en base a la llave de unicidad</description>
        <inlineHelpText>Número de veces que se permite un candidato ser repetido</inlineHelpText>
        <label>Máximo repetición candidatos</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ModalidadOnline__c</fullName>
        <description>Id del catálogo correspondiente a la modalidad online</description>
        <inlineHelpText>Id del catálogo correspondiente a la modalidad online</inlineHelpText>
        <label>Modalidad Online</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OmiteAsignacionAutomaticaLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Si  está seleccionado, omite el proceso de asignación automáica de prospectos</description>
        <inlineHelpText>Omite el proceso de asignación automáica de prospectos</inlineHelpText>
        <label>Omite asignación automatica de lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PasswordERPWS__c</fullName>
        <description>Contraseña para conectarse al ERP MAster WS</description>
        <label>PasswordERPWS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermitirEditarModalidad__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Permitir editar modalidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlantelVirtual__c</fullName>
        <description>Id del registro del objeto Plantel correspondiente a Universidad Virtual</description>
        <inlineHelpText>Id del registro del objeto Plantel correspondiente a Universidad Virtual</inlineHelpText>
        <label>Plantel virtual</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserAdmin__c</fullName>
        <label>UserAdmin</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>UsuarioERPWS__c</fullName>
        <description>Usuario para conectarse al SW del ERP Master</description>
        <label>UsuarioERPWS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Negocio</label>
</CustomObject>